--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">FavouriteFood</string>
-    <string name="title_activity_main">FavouriteFood</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+
+    <string name="title_all_dishes">All Dishes</string>
+    <string name="title_favorite_dishes">Favorite Dishes</string>
+    <string name="title_random_dish">Random Dish</string>
+
     <string name="title_notifications">Notifications</string>
     <string name="splash_screen_title">Fav Dish</string>
     <string name="add_dish">Add Dish</string>
