--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,8 @@
     <string name="msg_added_to_favorite">IMAGE is Favorite!</string>
     <string name="msg_removed_from_favorite">IMAGE is removed from Favorite!</string>
     <string name="label_no_favorite_dishes_added_yet">No favorite dishes added yet!!!</string>
+    <string name="image_description">image_description</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 
 </resources>
