--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="lbl_yes">YES</string>
     <string name="lbl_no">NO</string>
     <string name="delete_msgs">Are you sure you want to delete %1$s.</string>
+    <string name="action_filter_dishes">Filter Dishes</string>
+    <string name="title_select_item_to_filter">SELECT ITEM TO FILTER</string>
 
 </resources>
