--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,6 @@
     <string name="title_select_item_to_filter">SELECT ITEM TO FILTER</string>
     <string name="msg_already_added_to_favorites">You have already added the dish to your favorites.</string>
     <string name="please_wait">Please Wait&#8230;</string>
-    <string name="action_share_dish">Share</string>
+    <string name="action_share_dish">Share Dish</string>
 
 </resources>
